Update readme and other docs from seatcamp to partychurch

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title meatspace
+    title partychurch
     style.
       body {
         background-color: #ECECEC;
@@ -27,7 +27,7 @@ html
     meta(content='yes', name='apple-mobile-web-app-capable')
   body(class=theme == 'dark' ? 'dark' : '')
     header.shadow-1
-      p meatspace
+      p partychurch
       .actions
         p#active-users ?
         div.dropdown
