--- a/views/index.jade
+++ b/views/index.jade
@@ -23,6 +23,7 @@ html
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
     meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, ' +
         'maximum-scale=1.0, minimum-scale=1.0', name='viewport')
+    //- '
     meta(content='yes', name='mobile-web-app-capable')
     meta(content='yes', name='apple-mobile-web-app-capable')
   body(class=theme == 'dark' ? 'dark' : '')
@@ -33,11 +34,16 @@ html
         div.dropdown
           button.toggle.icon-invert.material-icons(title="Options") more_vert
           div.menu.shadow-2
+            button#logout-button(data-action='logout') Logout
             button(data-action='unmute') Unmute all
             button#change-theme(data-action='changeTheme') Use dark theme
             button(data-action='about') About
-    ul#message-list.shadow-1
-    footer
+    main
+      #broadcast-pane
+        | asdfasdf
+      #message-pane
+        ul#message-list.shadow-1
+    footer#message-input
       div.preview-container.shadow-1.camera-enabled
         div.camera-disabled-message
           span.camera-disabled-icon.icon-invert.material-icons videocam_off
