--- a/views/index.pug
+++ b/views/index.pug
@@ -21,9 +21,8 @@ html
     link(type='image/x-icon', rel='icon', href='favicon.ico')
     meta(name='theme-color', content='#212121')
     meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, ' +
-        'maximum-scale=1.0, minimum-scale=1.0', name='viewport')
-    //- '
+    meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0',
+         name='viewport')
     meta(content='yes', name='mobile-web-app-capable')
     meta(content='yes', name='apple-mobile-web-app-capable')
   body(class=theme == 'dark' ? 'dark' : '')
