Setup layout for broadcaster page

--- a/client/views/message.pug
+++ b/client/views/message.pug
@@ -1,6 +1,4 @@
-.video-container
-  img.filmstrip(src=BLANK_IMAGE)
-  button.save.shadow-1(title='Save as GIF')
+include video-container.pug
 p
 .message-meta
   .dropdown
