--- a/views/index.pug
+++ b/views/index.pug
@@ -1,72 +1,4 @@
-doctype html
-html
-  head
-    title partychurch
-    style.
-      body {
-        background-color: #ECECEC;
-        color: rgba(0, 0, 0, 0.87);
-        width: 100%;
-        height: 100%;
-      }
+extends shell.pug
 
-      body.dark {
-        background-color: #212121;
-        color: #ffffff;
-      }
-    link(rel='manifest', href='manifest.json')
-    link(type='text/css', rel='stylesheet',
-      href='//fonts.googleapis.com/css?family=Roboto:300,500,400|Material+Icons')
-    link(type='text/css', rel='stylesheet', href='styles.css?20160713')
-    link(type='image/x-icon', rel='icon', href='favicon.ico')
-    meta(name='theme-color', content='#212121')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
-    meta(content='width=device-width, height=device-height, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0',
-         name='viewport')
-    meta(content='yes', name='mobile-web-app-capable')
-    meta(content='yes', name='apple-mobile-web-app-capable')
-  body(class=theme == 'dark' ? 'dark' : '')
-    header.shadow-1
-      p partychurch
-      .actions
-        p#active-users ?
-        div.dropdown
-          button.toggle.icon-invert.material-icons(title="Options") more_vert
-          div.menu.shadow-2
-            button#logout-button(data-action='logout') Logout
-            button(data-action='unmute') Unmute all
-            button#change-theme(data-action='changeTheme') Use dark theme
-            button(data-action='about') About
-    main
-      #broadcast-pane
-        .broadcaster-video.displayed
-          include ../client/views/video-container.pug
-      #message-pane
-        ul#message-list.shadow-1
-    footer#message-input
-      div.preview-container.shadow-1.camera-enabled
-        div.camera-disabled-message
-          span.camera-disabled-icon.icon-invert.material-icons videocam_off
-          span.camera-disabled-text Please enable your webcam
-        video#preview
-      .progress.shadow-1
-        .circle
-          .mask.full
-            .fill
-          .mask.half
-            .fill
-            .fill.fix
-        .inset.shadow-1
-            p.text 0%
-      form.shadow-1
-        input#message(type='text', maxlength='250', autofocus='true', autocomplete='off',
-          autocorrect='on', autocapitalize='on', spellcheck='true')
-        p#char-counter 0 / 250
-        button#send.icon-invert.material-icons(type='submit', title="Send") send
-    if trackingId
-      script(type='text/javascript').
-        window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date
-        ga('create', '!{trackingId}', 'auto')
-        ga('send', 'pageview')
-      script(type='text/javascript', async, src='//www.google-analytics.com/analytics.js')
-    script(type='text/javascript', async, src='client.js')
+block main
+  include ../shared/views/index.pug
