set up base page navigation

--- a/views/shell.pug
+++ b/views/shell.pug
@@ -38,7 +38,9 @@ html
             button(data-action='unmute') Unmute all
             button#change-theme(data-action='changeTheme') Use dark theme
             button(data-action='about') About
+    // !!! main start !!!
     block main
+    // !!! main end !!!
     if trackingId
       script(type='text/javascript').
         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date
