fix routes and button labels

--- a/shared/views/index.pug
+++ b/shared/views/index.pug
@@ -10,13 +10,13 @@ main
     div: label
       input(type='checkbox')
       | Private?
-    div: input(type='submit', label='Create Room')
+    div: input(type='submit', value='Create Room')
     
   div: form
     h2 Join a room
     label Room Name
       input#existing-room-name
-    input(type='submit', label='Join Room')
+    input(type='submit', value='Join Room')
 
   div
     h2 Join public room
