wip: allow broadcaster to have preview in broadcaster pane
wip on password too

--- a/shared/views/password.pug
+++ b/shared/views/password.pug
@@ -1,3 +1,4 @@
-label
-  | Broadcaster Password:
-  input#broadcaster-password
+form#broadcaster-password-form
+  label
+    | Broadcaster Password:
+    input#broadcaster-password
