chore(css): use stylus to preprocess css

--- a/styl/styles.styl
+++ b/styl/styles.styl
@@ -668,7 +668,7 @@ main.room {
 }
 
 .dark #char-counter.full {
-  #color: #C62828;
+  color: #C62828;
 }
 
 #message:active + #char-counter, #message:focus + #char-counter {
