--- a/styl/typography.styl
+++ b/styl/typography.styl
@@ -3,9 +3,13 @@ html
   -ms-text-size-adjust: 100%
   -webkit-text-size-adjust: 100%
 
-body
+body, button
   font-family: 'Roboto', 'sans-serif'
-  font-size: 15px
+
+font-size = 15px
+
+body
+  font-size: font-size
   font-weight: normal
   line-height: 1.4
   -webkit-font-smoothing: antialiased
@@ -21,33 +25,30 @@ h1, h2, h3, h4, h5, h6
   margin: 8px 0
 
 h1
-  font-size: 45px
-  line-height: 64px
+  font-size: floor(font-size * 9/3)
+  line-height: floor(@font-size * 10/7)
 
 h2
-  font-size: 34px
-  line-height: 40px
+  font-size: floor(font-size * 7/3)
+  line-height: floor(@font-size * 8/7)
 
 h3
-  font-size: 24px
-  line-height: 32px
+  font-size: floor(font-size * 8/5)
+  line-height: floor(@font-size * 3/2)
 
 h4
-  font-size: 20px
+  font-size: floor(font-size * 4/3)
   font-weight: 500
   letter-spacing: 0.005em
 
 h5
-  font-size: 16px
+  font-size: floor(font-size + 1px)
   letter-spacing: 0.010em
-  line-height: 24px
+  line-height: floor(@font-size * 3/2)
 
 h6
-  font-size: 14px
+  font-size: floor(font-size - 1px)
   letter-spacing: 0.020em
 
 a, a:visited, a:hover, a:focus, a:active
   font-weight: inherit
-
-button
-  font-family: 'Roboto', 'sans-serif'
